UF-18118: update to dept44 8.0.1 and SB4
