# src/main/java/se/sundsvall/quotationrequest/configuration/CacheConfiguration.java
@@ -1,0 +1,9 @@
+package se.sundsvall.quotationrequest.configuration;
+
+import org.springframework.cache.annotation.EnableCaching;
+import org.springframework.context.annotation.Configuration;
+
+@Configuration
+@EnableCaching
+public class CacheConfiguration {
+}
